# GSR_Kine

./: ArduinoSerialComm.py  GSR_Kine_GUI.py  GSR_Kine_USER_GUI.py  GUI.py  InThisFeature.md  LICENSE  gestion_data.py  main.py  pyproject.toml  requirements.txt  serial_communication.py
Codigo Arduino/: Sensor_GSR_A7.ino
Pruebas para la GUI/: ArduinoSerialComm.py  dataSetup.ini  ini_read.py
Sensor_GSR_A7/: Prueba_Frec_de_muestreo.ino  Sensor_GSR_A7.ino  utilidades.h
