[build-system]
requires = ["setuptools>=42", "wheel", "hatchling"]
build-backend = "setuptools.build_meta"

[project]
name = "proyecto_gsr"
version = "1.0.0"
authors = [
  { name = "Manuel Mesa", email = "manuel.mesa@alumnos.uach.cl" },
  { name = "Pedro Galdames", email = "pedro.galdames@alumnos.uach.cl" }
]
description = "Proyecto GSR para kinesiología"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
keywords = ["GSR", "Kinesiología", "Biofeedback", "PyQt5"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyQt5==5.15.4",
    "pyqtgraph==0.12.3",
    "pyserial==3.5"
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.scripts]
gsr_gui = "src.main:main"
